# rust-resume-cli

./: Cargo.toml  LICENSE  Readme.md
data/experience/: experience.json
data/projects/: projects.json
data/skills/: skills.json
src/: contacts.rs  experience.rs  main.rs  projects.rs  skills.rs
