[package]
name = "new_rust_resume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
csv = "1.3.0"
inquire = "0.7.5"
rodio = "0.17.3"
serde_json = "1.0.116"
sixel-sys = "0.3.1"
viuer = "0.7.1"
